<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyThirdApp</string>
    <string name="hello_world">Hello world! I am Babak!</string>
    <string name="menu_settings">Settings</string>

    <string name="etCommandHint">Type a command</string>
    <string name="bResults">Try Command</string>
    <string name="tvResults">invalid</string>
    <string name="tbName">ToggleButton</string>
    <string name="tvString"></string>
    <string name="bSendEmail">Send Email</string>
    <string name="tvEmailAddress">Email address(es)</string>
    <string name="tvPersonName">Person\'s name</string>
    <string name="tvHatefulIntro">Hateful Intro:</string>
    <string name="tvThings">Stupid Things that this Person does</string>
    <string name="tvAction">What you want to do to this person:</string>
    <string name="tvOutro">Hateful Outro</string>
    <string name="bSetWallpaper">Set Wallpaper</string>
    <string name="bStartActivity">Start Activity</string>
    <string name="bStartActivityForResult">Satrt Activity For Result</string>
    <string name="tvsQuestions">Question is \.\.\.</string>
    <string name="rsYes">Yes</string>
    <string name="rsNo">No</string>
    <string name="rsMaybe">Maybe</string>
    <string name="bsReturn">Return</string>
    
    <string name="tvAbout">This is my first application for our company. I mean ACHOL.</string>
    
    <string name="bsAdd">Add One</string>
    <string name="bsSubtract">Subtract One</string>
    
    <string name="sCheckBox">Check Box</string>
    <string name="bsHandle">Handle</string>
    <string name="bsHandle1">Handle</string>
    <string name="bsHandle2">Handle</string>
    <string name="bsHandle3">Handle</string>
    <string name="bsHandle4">Handle</string>
    
    <string name="bsStartWatch">Start watch</string>
    <string name="bsStopWatch">Stop Watch</string>
    <string name="tvsShowResults">Show Results</string>
    <string name="tvsShowResults2">Show Results \:</string>
    <string name="bsAddTab">Add a Tab</string>
    
    <string name="bsGo">Go</string>
    <string name="bsBack">Go Back</string>
    <string name="bsForward">Go Forward</string>
    <string name="bsRefresh">Refresh Page</string>
    <string name="bsHistory">Clear History</string>
    
    <string name="bsFlipper">Flipper</string>
    <string name="tvsFlipper2">Text view 2</string>
    <string name="tvsFlipper3">Text view 3</string>
    <string name="tvsFlipper4">Text view 4</string>
    
    <string name="bsSave">Save</string>
    <string name="bsLoad">Load</string>
    <string name="tvsLoadSharedPrefs">Load the data</string>
    
    <string name="etsSaveAs">Save As\.\.\.</string>
    <string name="bsConfirmSaveAs">Confirm</string>
    <string name="bsSaveFile">Save</string>
    
    <string name="tvsSQLName">Name</string>
    <string name="tvsSQLHotness">Hotness scale 1 to 10</string>
    <string name="bsSQLUpdate">Update SQLite Database</string>
    <string name="bsSQLopenView">View</string>
    <string name="tvsSQLEnterRowID">Enter Row ID</string>
    
    <string name="tvsSqlViewNames">Names</string>
    <string name="tvsSqlViewHotness">Hotness</string>
    <string name="tvsSQLinfo">get info from db</string>
    
    <string name="bsGetInfo">Get Information</string>
    <string name="bsSQLmodify">Edit Entry</string>
    <string name="bsSQLdelete">Delete Entry</string>
</resources>