<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvsSQLName"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etSQLName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:hint="@string/tvString" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvsSQLHotness"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etSQLFamily"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:hint="@string/tvString" />

    <Button
        android:id="@+id/bSQLUpdate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bsSQLUpdate" />

    <Button
        android:id="@+id/bSQLopenView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bsSQLopenView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvsSQLEnterRowID"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etSQLrowInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/bGetInfo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bsGetInfo" />

    <Button
        android:id="@+id/bSQLmodify"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bsSQLmodify" />

    <Button
        android:id="@+id/bSQLdelete"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bsSQLdelete" />
    
</LinearLayout>