<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp" >

    <EditText
        android:id="@+id/etCommands"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etCommandHint"
        android:password="true"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100" >

        <Button
            android:id="@+id/bResults"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/bResults" 
            android:layout_weight="20" />

        <ToggleButton
            android:id="@+id/tbPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tbName"
            android:layout_weight="80"
            android:paddingBottom="10dp" 
            android:checked="true" />
    </LinearLayout>
    
    <TextView
        android:id="@+id/tvResults"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvResults"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>