<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/hello_world" 
        android:textSize="45sp" 
        android:gravity="center"
        android:id="@+id/tvDisplay"
        />
    
    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"

        android:text="@string/bsAdd"
        android:gravity="center"
        android:id="@+id/bAdd"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/bSub"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bAdd"
        android:layout_below="@+id/bAdd"
        android:gravity="center"
        android:text="@string/bsSubtract" />

</RelativeLayout>